<resources>

    <string name="app_name">Pool Maintenance</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="poolsInArea">Pools in the Area (Map)</string>
    <string name="addnewpool">Add New Pool</string>
    <string name="displaylistofpools">Display List of Pools</string>
    <string name="searchpool">Search Pool</string>
    <string name="enable_gps">Enable GPS</string> 
    <string name="enable_gps_dialog">GPS provider not enabled. Would you like to enable it?</string>
	<string name="not_support_gps">GPS provider not supported or disabled</string>
	<string name="not_support_network">Network provider not supported</string>
	<string name="contactname">"Contact Name: "</string>
	<string name="firstnamelastname">Firstname Lastname</string>
	<string name="contactphone">Contact Phone:</string>
	<string name="contactemail">Contact Email:</string>
	<string name="address">Address:</string>
	<string name="ph">PH:</string>
	<string name="ppm">ppm</string>
	<string name="ppb">ppb</string>
	<string name="freeavailablechlorine">Free Chlorine</string>
	<string name="combinedchlorine">Combined Chlorine</string>
	<string name="calciumhardness">Calcium Hardness</string>
	<string name="stabilizerconditioner">Stabilizer Conditioner</string>
	<string name="stabilizerconditionerforsalt">Stabilizer/Conditioner for Salt</string>
	<string name="totaldissolvedsolids">Total Dissolved Solids</string>
	<string name="salt">Salt:</string>
	<string name="phosphates">Phosphates</string>
	<string name="alkalinity">Alkalinity</string>
	<string name="cyanuricacid">Cyanuric Acid</string>
	<string name="watertemperature">Water Temperature</string>
	<string name="pumppressure">Pump Pressure</string>
	<string name="powderedchlorine">Powdered Chloride</string>
	<string name="liquidchlorine">Liquid Chlorine</string>
	<string name="note">Note</string>
	<string name="date">Date</string>
	<string name="emptystring"></string>
	<string name="addlog">Add Log</string>
	<string name="degreefahrenheit">F</string>
	   
	
</resources>