<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Button
        android:id="@+id/btnPoolsInMap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:text="@string/poolsInArea" />

    <Button
        android:id="@+id/btnListOfPools"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/displaylistofpools" />

    <Button
        android:id="@+id/btnAddNewPool"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnPoolsInMap"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:text="@string/addnewpool" />

    <Button
        android:id="@+id/btnSearchPool"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnListOfPools"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="76dp"
        android:text="@string/searchpool" />

</RelativeLayout>
